--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Сучасна пекарня</title>
 </head>
 <body>
@@ -14,25 +15,25 @@
                     <img src="./images/logo.svg" alt="logo">
                 </a>
                 <ul>
-                    <li><a href="#">Наші традиції</a></li>
-                    <li><a href="#">Шеф-кухарі</a></li>
-                    <li><a href="#">Формати</a></li>
-                    <li><a href="#">Контакти</a></li>
+                    <li><a href="#" class="link">Наші традиції</a></li>
+                    <li><a href="#" class="link">Шеф-кухарі</a></li>
+                    <li><a href="#" class="link">Формати</a></li>
+                    <li><a href="#" class="link">Контакти</a></li>
                 </ul>
             </nav>
-            <button type="submit">Замовити дзвінок</button>
+            <button type="submit" class="button">Замовити дзвінок</button>
         </header>
         <main>
             <section>
-                <h1>Сучасна пекарня</h1>
-                <ul>
+                <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+                <ul class="advantages-list">
                     <li>Великий попит на ринку </li>
                     <li>Доступні за бюджетом формати</li>
                     <li>Досвідчена управлінська команда</li>
                 </ul>
             </section>
             <section>
-                <h2>Новий формат традицій</h2>
+                <h2 class="section-title">Новий формат традицій</h2>
                 <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
                 <p>Ми працюємо як найвідоміші мережі— 
                     <span>5 хвилин і замовлення готове.</span> 
@@ -41,7 +42,7 @@
                     <img src="./images/baker_man.jpg" alt="backer_man">
             </section>
             <section>
-                <h2>Наші найкращі шеф -кухарі</h2>
+                <h2 class="section-title">Наші найкращі шеф-кухарі</h2>
                 <ul>
                     <li>
                         <article>
@@ -64,7 +65,7 @@
                 </ul>
             </section>
             <section>
-                <h2>Формати</h2>
+                <h2 class="section-title">Формати</h2>
                 <ul>
                     <li>
                         <article>
@@ -96,8 +97,10 @@
                 </ul>
             </section>
             <section>
-                <h2>Приєднуйся до мережі пекарень</h2>
+                <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
                 <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+                <button type="submit" class="button">Замовити дзвінок</button>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.163871257654!2d30.488658576247577!3d50.456673086916076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1696524048276!5m2!1suk!2sua" width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
     </main>
         <footer>
@@ -105,10 +108,10 @@
                 <img src="./images/logo.svg" alt="logo">
             </a>
             <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="#" class="link">Наші традиції</a></li>
+                <li><a href="#" class="link">Шеф-кухарі</a></li>
+                <li><a href="#" class="link">Формати</a></li>
+                <li><a href="#" class="link">Контакти</a></li>
             </ul>
             <address>
                 <ul>
